--- a/templates/emails/merchant_contract.html.twig
+++ b/templates/emails/merchant_contract.html.twig
@@ -4,7 +4,7 @@
 
     <div style="text-align: center; margin-bottom: 20px;">
         <img src="https://falkon.click/image/FalkonANK/logo-transparent-png.png"
-             alt="FalkonANK Logo"
+             alt="FalkonANK"
              style="max-width: 100px; height: auto;">
     </div>
 
