--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -24,7 +24,7 @@
         <div id="navMenu" class="onglets">
             <a href="{{ path('app_home_page') }}"><i class="fas fa-home"></i></a>
             <a href="{{ path('app_about_page') }}">{{ 'about'|trans }}</a>
-            <a href="{{ path('contact_nous') }}">{{ 'contact.title'|trans }}</a>
+            <a href="{{ path('contact_nous') }}">{{ 'contact.us'|trans }}</a>
             <a href="{{ path('app_cadre_photo') }}">{{ 'photos'|trans }}</a>
 
             {% if app.user %}
