--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -41,7 +41,7 @@
                                 <a class="dropdown-item" href="{{ path('app_user_orders') }}">{{ 'orders'|trans }}</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="{{ path('user_basket') }}">{{ 'basket_h'|trans }}</a>
+                                <a class="dropdown-item" href="{{ path('user_basket') }}">{{ 'basket_h'|trans }} <i class="fas fa-shopping-cart"></i></a>
                             </li>
                         {% endif %}
                     </ul>
