Mise à jour du orderController Route app_order_show

--- a/templates/order/print.html.twig
+++ b/templates/order/print.html.twig
@@ -289,7 +289,7 @@
 		<div class="actions">
 			<button class="btn btn-print" onclick="window.print()">🖨️ Imprimer</button>
 
-			<a href="https://falkon.click/{{ path('app_order_show', { id: order.id }) }}" class="btn btn-back">
+			<a href="{{ path('app_order_show', { id: order.id }) }}" class="btn btn-back">
 				⬅ aller à la commande
 			</a>
 		</div>
