--- a/templates/order/show.html.twig
+++ b/templates/order/show.html.twig
@@ -68,26 +68,21 @@
 		</div>
 
 		<div class="order_table">
+			<div style="text-align:center; margin:30px 0;">
+				<a href="{{ path('order_print', {'ref': order.ref}) }}" style="
+																            background:#000;
+																            color:#fff;
+																            padding:12px 20px;
+																            text-decoration:none;
+																            border-radius:5px;
+																            font-weight:bold;
+																        ">
+					🖨️
+					{{ 'receipt.print'|trans }}
+				</a>
+			</div>
 			<table class="table table-dark">
 				<tbody>
-					<tr>
-						<th>{{ 'order.detail.date'|trans }}</th>
-						<td>
-							<div style="text-align:center; margin:30px 0;">
-								<a href="{{ path('order_print', {'ref': order.ref}) }}" style="
-										            background:#000;
-										            color:#fff;
-										            padding:12px 20px;
-										            text-decoration:none;
-										            border-radius:5px;
-										            font-weight:bold;
-										        ">
-									🖨️ Imprimer le reçu
-								</a>
-							</div>
-						</td>
-					</tr>
-
 					<tr>
 						<th>{{ 'order.detail.date'|trans }}</th>
 						<td>{{ order.orderDate ? order.orderDate|date('d-m-Y H:i:s') : '' }}</td>
