--- a/templates/order/show.html.twig
+++ b/templates/order/show.html.twig
@@ -145,13 +145,13 @@
 
 		<div style="text-align:center; margin:30px 0;">
 			<a href="{{ path('order_print', {'ref': order.ref}) }}" target="_blank" style="
-					                background:#000;
-					                color:#fff;
-					                padding:12px 20px;
-					                text-decoration:none;
-					                border-radius:5px;
-					                font-weight:bold;
-					           ">
+										                background:#000;
+										                color:#fff;
+										                padding:12px 20px;
+										                text-decoration:none;
+										                border-radius:5px;
+										                font-weight:bold;
+										           ">
 				🧾
 				{{ 'receipt.print'|trans }}
 			</a>
@@ -183,8 +183,7 @@
 						</span>
 					</td>
 				</tr>
-
-
+                
 				<tr>
 					<th>{{ 'order.detail.secret_code'|trans }}</th>
 					<td data-label="{{ 'order.detail.secret_code'|trans }}">
@@ -205,7 +204,9 @@
 					<tr>
 						<th>{{ 'order.detail.refund'|trans }}</th>
 						<td data-label="{{ 'order.detail.refund'|trans }}">
-							{{ order.refundStatus|trans }}
+							<span class="{{ order.refundStatus == 'Reembolsado' ? 'text-success' : 'text-warning' }}">
+								{{ order.refundStatus|trans }}
+							</span>
 							–
 							{{ order.refundNote }}
 						</td>
