Mise à jour  orderCrudControllerr

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,6 +1,6 @@
-body {
+/* body {
     background-color: lightgray;
-}
+} */
 
 /* Ligne verte pour les commandes "Entregue e finalizado" avec code secret */
 tr.row-entregue-finalizado {
