--- a/templates/basket/user_basket.html.twig
+++ b/templates/basket/user_basket.html.twig
@@ -102,7 +102,7 @@
                                 </div>
                                 <div class="mb-3">
                                     <label for="phone" class="form-label">{{ 'checkout.phone'|trans }}</label>
-                                    <input type="tel" class="form-control" name="phone">
+                                    <input type="tel" class="form-control" name="phone" required>
                                 </div>
                                 <input type="hidden" name="total" value="{{ totalPrice }}"/>
                             </div>
