Mise à jour  Product - poid, dimension description

--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -44,7 +44,7 @@
             {% endif %}
 
             <h3 style="margin-top: 1%;">{{ 'product.detail.description'|trans }}</h3>
-            <p>{{ product.description|row }}</p>
+            <p>{{ product.description|raw }}</p>
         </div>
 
         {# div shop #}
