Mise à jour  Product - poid, dimension description -show

--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -45,6 +45,11 @@
 
             <h3 style="margin-top: 1%;">{{ 'product.detail.description'|trans }}</h3>
             <p>{{ product.description|raw }}</p>
+
+            <h5 style="margin-top: 1%;">{{ 'product.field.weight'|trans }}</h5>
+            <p>{{ product.weight }}</p>
+            <h5 style="margin-top: 1%;">{{ 'product.field.dimension'|trans }}</h5>
+            <p>{{ product.dimension }}</p>
         </div>
 
         {# div shop #}
