--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -46,10 +46,14 @@
             <h3 style="margin-top: 1%;">{{ 'product.detail.description'|trans }}</h3>
             <p>{{ product.description|raw }}</p>
 
-            <h5 style="margin-top: 1%;">{{ 'product.field.weight'|trans }}</h5>
-            <p>{{ product.weight }}</p>
-            <h5 style="margin-top: 1%;">{{ 'product.field.dimension'|trans }}</h5>
-            <p>{{ product.dimension }}</p>
+            {% if product.weight %}
+                <h5 style="margin-top: 1%;">{{ 'product.field.weight'|trans }}</h5>
+                <p>{{ product.weight }}</p>
+            {% endif %}
+            {% if product.dimension %}
+                <h5 style="margin-top: 1%;">{{ 'product.field.dimension'|trans }}</h5>
+                <p>{{ product.dimension }}</p>
+            {% endif %}
         </div>
 
         {# div shop #}
