Mise à jour dashboard et translate

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -21,3 +21,8 @@ tr.row-entregue-finalizado {
     color: #fd7e14;
     font-weight: bold;
 }
+
+.text-refund {
+    color: #9f9e80;
+    font-weight: bold;
+}
